# seldon

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  data.csv  idea.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENABLE_EXCEL_IMPORT.md  FEATURE_STATUS.md  USAGE.md
include/: AutoConfig.h  AutomationPipeline.h  BenchmarkEngine.h  CSVUtils.h  CausalDiscovery.h  CommonUtils.h  Dataset.h  DeterministicHeuristics.h  GnuplotEngine.h  LogicEngine.h  MathUtils.h  NeuralLayer.h  NeuralNet.h  PipelineParts.h  PlotHeuristics.h  PredictionService.h  Preprocessor.h  ReportEngine.h  SeldonExceptions.h  SeldonGui.h  Statistics.h  StatsEngine.h  StatsUtils.h  TerminalUI.h  TypedDataset.h  WebDashboard.h
src/: AutoConfig.cpp  AutomationPipeline.cpp  BenchmarkEngine.cpp  CSVUtils.cpp  CausalDiscovery.cpp  CommonUtils.cpp  Dataset.cpp  DeterministicHeuristics.cpp  GnuplotEngine.cpp  LogicEngine.cpp  MathUtils.cpp  NeuralLayer.cpp  NeuralNet.cpp  PlotHeuristics.cpp  Preprocessor.cpp  ReportEngine.cpp  SeldonGui.cpp  Statistics.cpp  StatsEngine.cpp  StatsUtils.cpp  TerminalUI.cpp  TypedDataset.cpp  main.cpp
src/pipeline_parts/: PipelineBivariate.cpp  PipelineModeling.cpp  PipelineReporting.cpp  PipelineRuntime.cpp  PipelineUnivariate.cpp
src/service/: PredictionService.cpp
src/web/: WebDashboard.cpp
tests/security/: security_regression.sh
tests/security/fixtures/: security_test.csv  security_xss.csv  security_xss_edges.csv
web/: analysis.html  analysis.js  api.js  app.js  index.html  state.js  ui.js  websocket.js
