cmake_minimum_required(VERSION 3.10)
project(Seldon VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB SOURCES "src/*.cpp")
list(FILTER SOURCES EXCLUDE REGEX "src/tests\\.cpp$")

add_executable(seldon ${SOURCES})
target_include_directories(seldon PRIVATE include)

option(SELDON_ENABLE_OPENMP "Enable OpenMP acceleration for supported kernels" ON)
option(SELDON_NEURAL_FLOAT32 "Use float32 for neural-layer tensors (weights/activations/gradients)" OFF)
option(SELDON_ENABLE_OPENCL "Enable OpenCL backend hooks when OpenCL is available" OFF)
option(SELDON_ENABLE_CUDA "Build optional CUDA-enabled binary target when CUDA toolkit is available" OFF)
option(SELDON_ENABLE_NATIVE_ARCH "Enable -march=native for CPU-specific optimization" ON)
option(SELDON_ENABLE_FAST_MATH "Enable -ffast-math for faster floating-point kernels" OFF)
option(SELDON_ENABLE_LTO "Enable interprocedural optimization (LTO/IPO)" OFF)
option(SELDON_ENABLE_GUI "Build GTK4 desktop dashboard interface" ON)

if(SELDON_ENABLE_GUI)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
    target_link_libraries(seldon PRIVATE PkgConfig::GTK4)
    target_compile_definitions(seldon PRIVATE SELDON_ENABLE_GUI)
    message(STATUS "Seldon: GTK4 GUI enabled")
else()
    message(STATUS "Seldon: GUI disabled (SELDON_ENABLE_GUI=OFF); CLI-only mode")
endif()

if(SELDON_ENABLE_NATIVE_ARCH)
    target_compile_options(seldon PRIVATE -march=native)
endif()

if(SELDON_ENABLE_FAST_MATH)
    target_compile_options(seldon PRIVATE -ffast-math)
endif()

if(SELDON_ENABLE_LTO)
    set_property(TARGET seldon PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

if(SELDON_NEURAL_FLOAT32)
    target_compile_definitions(seldon PRIVATE SELDON_NEURAL_FLOAT32)
    message(STATUS "Seldon: Neural float32 precision enabled")
endif()

if(SELDON_ENABLE_OPENMP)
    find_package(OpenMP QUIET)
    if(OpenMP_CXX_FOUND)
        target_link_libraries(seldon PRIVATE OpenMP::OpenMP_CXX)
        target_compile_definitions(seldon PRIVATE USE_OPENMP)
        message(STATUS "Seldon: OpenMP enabled")
    else()
        message(STATUS "Seldon: OpenMP requested but not found; building without OpenMP")
    endif()
else()
    message(STATUS "Seldon: OpenMP explicitly disabled (SELDON_ENABLE_OPENMP=OFF)")
endif()

if(SELDON_ENABLE_OPENCL)
    find_package(OpenCL QUIET)
    if(OpenCL_FOUND)
        target_link_libraries(seldon PRIVATE OpenCL::OpenCL)
        target_compile_definitions(seldon PRIVATE SELDON_USE_OPENCL)
        message(STATUS "Seldon: OpenCL enabled")
    else()
        message(STATUS "Seldon: OpenCL requested but not found; building without OpenCL")
    endif()
endif()

if(SELDON_ENABLE_CUDA)
    find_package(CUDAToolkit QUIET)
    if(CUDAToolkit_FOUND)
        add_executable(seldon_cuda ${SOURCES})
        target_include_directories(seldon_cuda PRIVATE include)
        target_link_libraries(seldon_cuda PRIVATE CUDA::cudart)
        target_compile_definitions(seldon_cuda PRIVATE SELDON_USE_CUDA)
        if(SELDON_ENABLE_OPENMP AND OpenMP_CXX_FOUND)
            target_link_libraries(seldon_cuda PRIVATE OpenMP::OpenMP_CXX)
            target_compile_definitions(seldon_cuda PRIVATE USE_OPENMP)
        endif()
        if(SELDON_NEURAL_FLOAT32)
            target_compile_definitions(seldon_cuda PRIVATE SELDON_NEURAL_FLOAT32)
        endif()
        if(SELDON_ENABLE_OPENCL AND OpenCL_FOUND)
            target_link_libraries(seldon_cuda PRIVATE OpenCL::OpenCL)
            target_compile_definitions(seldon_cuda PRIVATE SELDON_USE_OPENCL)
        endif()
        if(SELDON_ENABLE_NATIVE_ARCH)
            target_compile_options(seldon_cuda PRIVATE -march=native)
        endif()
        if(SELDON_ENABLE_FAST_MATH)
            target_compile_options(seldon_cuda PRIVATE -ffast-math)
        endif()
        if(SELDON_ENABLE_LTO)
            set_property(TARGET seldon_cuda PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
        endif()
        message(STATUS "Seldon: CUDA target enabled (binary: seldon_cuda)")
    else()
        message(STATUS "Seldon: CUDA requested but toolkit not found; skipping seldon_cuda target")
    endif()
endif()
