cmake_minimum_required(VERSION 3.10)
project(Seldon VERSION 0.1.0 LANGUAGES CXX)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB SOURCES "src/*.cpp")
list(FILTER SOURCES EXCLUDE REGEX "src/tests\\.cpp$")
list(FILTER SOURCES EXCLUDE REGEX "src/service_main\\.cpp$")

add_executable(seldon ${SOURCES})
target_include_directories(seldon PRIVATE include)

option(SELDON_ENABLE_OPENMP "Enable OpenMP acceleration for supported kernels" ON)
option(SELDON_NEURAL_FLOAT32 "Use float32 for neural-layer tensors (weights/activations/gradients)" OFF)
option(SELDON_ENABLE_OPENCL "Enable OpenCL backend hooks when OpenCL is available" OFF)
option(SELDON_ENABLE_CUDA "Build optional CUDA-enabled binary target when CUDA toolkit is available" OFF)
option(SELDON_ENABLE_NATIVE_PARQUET "Enable native C++ Parquet export when Arrow/Parquet libs are available" ON)
option(SELDON_ENABLE_NATIVE_ARCH "Enable -march=native for CPU-specific optimization" ON)
option(SELDON_ENABLE_FAST_MATH "Enable -ffast-math for faster floating-point kernels" OFF)
option(SELDON_ENABLE_LTO "Enable interprocedural optimization (LTO/IPO)" ON)
option(SELDON_ENABLE_PGO_GENERATE "Build with -fprofile-generate instrumentation" OFF)
option(SELDON_ENABLE_PGO_USE "Build with -fprofile-use profile feedback" OFF)
option(SELDON_ENABLE_REST_SERVICE "Build lightweight REST prediction service" ON)

message(STATUS "Seldon: web dashboard + CLI + REST service modes enabled in unified binary")

if(SELDON_ENABLE_NATIVE_ARCH)
    target_compile_options(seldon PRIVATE -march=native)
endif()

target_compile_options(seldon PRIVATE
    $<$<CONFIG:Release>:-O3>
)

if(SELDON_ENABLE_FAST_MATH)
    target_compile_options(seldon PRIVATE -ffast-math)
endif()

if(SELDON_ENABLE_LTO)
    set_property(TARGET seldon PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

if(SELDON_ENABLE_PGO_GENERATE AND SELDON_ENABLE_PGO_USE)
    message(FATAL_ERROR "SELDON_ENABLE_PGO_GENERATE and SELDON_ENABLE_PGO_USE are mutually exclusive")
endif()

if(SELDON_ENABLE_PGO_GENERATE)
    target_compile_options(seldon PRIVATE -fprofile-generate)
    target_link_options(seldon PRIVATE -fprofile-generate)
elseif(SELDON_ENABLE_PGO_USE)
    target_compile_options(seldon PRIVATE -fprofile-use -fprofile-correction)
    target_link_options(seldon PRIVATE -fprofile-use -fprofile-correction)
endif()

if(SELDON_NEURAL_FLOAT32)
    target_compile_definitions(seldon PRIVATE SELDON_NEURAL_FLOAT32)
    message(STATUS "Seldon: Neural float32 precision enabled")
endif()

if(SELDON_ENABLE_OPENMP)
    find_package(OpenMP QUIET)
    if(OpenMP_CXX_FOUND)
        target_link_libraries(seldon PRIVATE OpenMP::OpenMP_CXX)
        target_compile_definitions(seldon PRIVATE USE_OPENMP)
        message(STATUS "Seldon: OpenMP enabled")
    else()
        message(STATUS "Seldon: OpenMP requested but not found; building without OpenMP")
    endif()
else()
    message(STATUS "Seldon: OpenMP explicitly disabled (SELDON_ENABLE_OPENMP=OFF)")
endif()

if(SELDON_ENABLE_OPENCL)
    find_package(OpenCL QUIET)
    if(OpenCL_FOUND)
        target_link_libraries(seldon PRIVATE OpenCL::OpenCL)
        target_compile_definitions(seldon PRIVATE SELDON_USE_OPENCL)
        message(STATUS "Seldon: OpenCL enabled")
    else()
        message(STATUS "Seldon: OpenCL requested but not found; building without OpenCL")
    endif()
endif()

if(SELDON_ENABLE_NATIVE_PARQUET)
    find_package(Arrow QUIET CONFIG)
    find_package(Parquet QUIET CONFIG)
    if(Arrow_FOUND AND Parquet_FOUND)
        if(TARGET Arrow::arrow_shared)
            target_link_libraries(seldon PRIVATE Arrow::arrow_shared)
        elseif(TARGET Arrow::arrow_static)
            target_link_libraries(seldon PRIVATE Arrow::arrow_static)
        elseif(TARGET Arrow::arrow)
            target_link_libraries(seldon PRIVATE Arrow::arrow)
        else()
            message(FATAL_ERROR "Seldon: Arrow package found but no supported Arrow target was exposed")
        endif()

        if(TARGET Parquet::parquet_shared)
            target_link_libraries(seldon PRIVATE Parquet::parquet_shared)
        elseif(TARGET Parquet::parquet_static)
            target_link_libraries(seldon PRIVATE Parquet::parquet_static)
        elseif(TARGET Parquet::parquet)
            target_link_libraries(seldon PRIVATE Parquet::parquet)
        else()
            message(FATAL_ERROR "Seldon: Parquet package found but no supported Parquet target was exposed")
        endif()

        target_compile_definitions(seldon PRIVATE SELDON_USE_NATIVE_PARQUET)
        message(STATUS "Seldon: Native Parquet export enabled")
    else()
        message(STATUS "Seldon: Native Parquet requested but Arrow/Parquet not found; building without native Parquet export")
    endif()
endif()

if(SELDON_ENABLE_REST_SERVICE)
    find_path(HTTPLIB_INCLUDE_DIR httplib.h)
    find_library(HTTPLIB_LIBRARY NAMES cpp-httplib)
    if(NOT HTTPLIB_INCLUDE_DIR)
        include(FetchContent)
        FetchContent_Declare(
            cpp_httplib
            GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
            GIT_TAG v0.15.3
        )
        FetchContent_MakeAvailable(cpp_httplib)
        set(HTTPLIB_INCLUDE_DIR "${cpp_httplib_SOURCE_DIR}")
        unset(HTTPLIB_LIBRARY)
    endif()

    target_sources(seldon PRIVATE src/service/PredictionService.cpp)
    target_sources(seldon PRIVATE src/web/WebDashboard.cpp)
    target_include_directories(seldon PRIVATE ${HTTPLIB_INCLUDE_DIR})
    if(HTTPLIB_LIBRARY)
        target_link_libraries(seldon PRIVATE ${HTTPLIB_LIBRARY})
    endif()

    message(STATUS "Seldon: REST prediction service integrated into seldon binary")
endif()

if(SELDON_ENABLE_CUDA)
    find_package(CUDAToolkit QUIET)
    if(CUDAToolkit_FOUND)
        add_executable(seldon_cuda ${SOURCES})
        target_include_directories(seldon_cuda PRIVATE include)
        target_link_libraries(seldon_cuda PRIVATE CUDA::cudart)
        target_compile_definitions(seldon_cuda PRIVATE SELDON_USE_CUDA)
        if(SELDON_ENABLE_OPENMP AND OpenMP_CXX_FOUND)
            target_link_libraries(seldon_cuda PRIVATE OpenMP::OpenMP_CXX)
            target_compile_definitions(seldon_cuda PRIVATE USE_OPENMP)
        endif()
        if(SELDON_NEURAL_FLOAT32)
            target_compile_definitions(seldon_cuda PRIVATE SELDON_NEURAL_FLOAT32)
        endif()
        if(SELDON_ENABLE_OPENCL AND OpenCL_FOUND)
            target_link_libraries(seldon_cuda PRIVATE OpenCL::OpenCL)
            target_compile_definitions(seldon_cuda PRIVATE SELDON_USE_OPENCL)
        endif()
        if(SELDON_ENABLE_NATIVE_ARCH)
            target_compile_options(seldon_cuda PRIVATE -march=native)
        endif()
        if(SELDON_ENABLE_FAST_MATH)
            target_compile_options(seldon_cuda PRIVATE -ffast-math)
        endif()
        if(SELDON_ENABLE_LTO)
            set_property(TARGET seldon_cuda PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
        endif()
        target_compile_options(seldon_cuda PRIVATE
            $<$<CONFIG:Release>:-O3>
        )
        if(SELDON_ENABLE_PGO_GENERATE)
            target_compile_options(seldon_cuda PRIVATE -fprofile-generate)
            target_link_options(seldon_cuda PRIVATE -fprofile-generate)
        elseif(SELDON_ENABLE_PGO_USE)
            target_compile_options(seldon_cuda PRIVATE -fprofile-use -fprofile-correction)
            target_link_options(seldon_cuda PRIVATE -fprofile-use -fprofile-correction)
        endif()
        message(STATUS "Seldon: CUDA target enabled (binary: seldon_cuda)")
    else()
        message(STATUS "Seldon: CUDA requested but toolkit not found; skipping seldon_cuda target")
    endif()
endif()

